--- a/content/themes/rolledesign/css/dev/gutenberg.css
+++ b/content/themes/rolledesign/css/dev/gutenberg.css
@@ -2,6 +2,7 @@
 /* stylelint-enable declaration-property-unit-allowed-list */
 :root {
   --color-white: #fff;
+  --color-white-rgb: 255, 255, 255;
   --color-black: #222;
   --color-black-rgb: 22, 22, 22;
   --color-shadows: #b8bbb3;
