--- a/content/themes/rolledesign/sass/variables/_colors.scss
+++ b/content/themes/rolledesign/sass/variables/_colors.scss
@@ -1,6 +1,7 @@
 :root {
   // Base colors
   --color-white: #fff;
+  --color-white-rgb: 255, 255, 255;
   --color-black: #222;
   --color-black-rgb: 22, 22, 22;
   --color-shadows: #b8bbb3;
