--- a/content/themes/rolledesign/sass/views/_now.scss
+++ b/content/themes/rolledesign/sass/views/_now.scss
@@ -27,7 +27,7 @@
 
   .content {
     /* stylelint-disable property-disallowed-list, number-max-precision */
-    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, .8393732492997199) 50%, rgba(255, 255, 255, 1) 100%);
+    background: linear-gradient(180deg, rgba(var(--color-white-rgb), 0) 0%, rgba(var(--color-white-rgb), .8393732492997199) 50%, rgba(var(--color-white-rgb), 1) 100%);
     padding-bottom: var(--padding-container-vertical);
     padding-left: var(--padding-container-horizontal);
     padding-right: var(--padding-container-horizontal);
